--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -33,15 +33,15 @@ $app-direction: ltr;
 // The "primary" color is the only required color in the map.
 
 $colors: (
-  primary:    #0D47A1,
-  secondary:  #00E676,
+  primary:    #062350,
+  secondary:  #1DE9B6,
   danger:     #f53d3d,
   light:      #f4f4f4,
   dark:       #222,
   white:    #fff,
 );
 
-
+$background-color :color($colors, primary);
 $tabs-background:color($colors, primary);
 $tabs-md-tab-color-inactive: color($colors, secondary);
 $tabs-ios-tab-color-inactive: color($colors, secondary);
