--- a/src/pages/group/create-group/group-create-detail/group-create-detail.scss
+++ b/src/pages/group/create-group/group-create-detail/group-create-detail.scss
@@ -1,5 +1,13 @@
 page-group-create-detail {
-    ion-label {
+    ion-label, ion-option, .select-text, .input {
         color: color($colors, secondary);
+    }
+
+    .item-divider {
+        background-color: color($colors, secondary);
+    }
+
+    ion-item-divider {
+        color: color($colors, primary);
     }
 }
